# functor

./: .coveragerc  LICENSE  README.md  pyproject.toml
src/functor/: Functor.py  Identity.py  Maybe.py  __init__.py
tests/functor/: FunctorTest.py  IdentityTest.py  MaybeTest.py  __init__.py
