[project]
name = "functor"
version = "0.1.0"
description = "This is a functor lib depends on Python."
authors = [
    {name = "PurplePuffCake", email = "g7xcy@outlook.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
