[project]
name = "functor"
version = "0.1.0"
description = "This is a functor lib depends on Python."
authors = [
    {name = "PurplePuffCake", email = "g7xcy@outlook.com"},
]
dependencies = ["coverage>=7.8.0", "ruff>=0.11.10"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "python -m unittest discover"
coverage = "coverage run -m unittest discover"
report = "coverage report -m"
report_html = "coverage html"
check = "pdm run ruff check"
format = "pdm run ruff format"